// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item is unselected by default 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: solid 3px transparent;
  color: #b0bac9;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding: 0 0 0 25px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-0:hover {
  background-color: rgba(46,91,255,0.1);
}

.emotion-1 {
  margin-left: 16px;
  opacity: 1;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

<div>
  <li
    class="emotion-0"
    data-testid="drawer-item"
  >
    <span
      class="emotion-1"
      data-testid="drawer-item-text"
    />
  </li>
</div>
`;

exports[`Item renders an icon 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: solid 3px transparent;
  color: #b0bac9;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding: 0 0 0 25px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-0:hover {
  background-color: rgba(46,91,255,0.1);
}

.emotion-1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 24px;
  width: 24px;
}

.emotion-2 {
  margin-left: 16px;
  opacity: 1;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

<div>
  <li
    class="emotion-0"
    data-testid="drawer-item"
  >
    <svg
      class="emotion-1"
      color="#bfc5d2"
      data-testid="drawer-item-icon"
    />
    <span
      class="emotion-2"
      data-testid="drawer-item-text"
    />
  </li>
</div>
`;

exports[`Item renders compact variant 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: solid 3px transparent;
  color: #b0bac9;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding: 0 0 0 25px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-0:hover {
  background-color: rgba(46,91,255,0.1);
}

.emotion-1 {
  margin-left: 16px;
  opacity: 0;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

<div>
  <li
    class="emotion-0"
    data-testid="drawer-item"
  >
    <span
      class="emotion-1"
      data-testid="drawer-item-text"
    />
  </li>
</div>
`;

exports[`Item renders content 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: solid 3px transparent;
  color: #b0bac9;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding: 0 0 0 25px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-0:hover {
  background-color: rgba(46,91,255,0.1);
}

.emotion-1 {
  margin-left: 16px;
  opacity: 1;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

<div>
  <li
    class="emotion-0"
    data-testid="drawer-item"
  >
    <span
      class="emotion-1"
      data-testid="drawer-item-text"
    >
      The SMS program is down, synthesize the redundant feed so we can synthesize the SQL hard drive!
    </span>
  </li>
</div>
`;

exports[`Item renders selected item 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(46,91,255,0.1);
  border-left: solid 3px #2e5bff;
  color: #2e5bff;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding: 0 0 0 25px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-1 {
  margin-left: 16px;
  opacity: 1;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

<div>
  <li
    class="emotion-0"
    data-testid="drawer-item"
  >
    <span
      class="emotion-1"
      data-testid="drawer-item-text"
    />
  </li>
</div>
`;

exports[`Item shows text by default 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: solid 3px transparent;
  color: #b0bac9;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding: 0 0 0 25px;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-0:hover {
  background-color: rgba(46,91,255,0.1);
}

.emotion-1 {
  margin-left: 16px;
  opacity: 1;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
}

<div>
  <li
    class="emotion-0"
    data-testid="drawer-item"
  >
    <span
      class="emotion-1"
      data-testid="drawer-item-text"
    />
  </li>
</div>
`;
